sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:16: error: ')' expected but '}' found.
  }
  ^